remove preceding slash in images source and nav text responsive styles

--- a/differences.html
+++ b/differences.html
@@ -15,7 +15,7 @@
     <div class="sidebar">
       <div class="sidebar_header">
         <div class="sidebar_header_logo">
-          <img src="/images/logo.svg" alt="">
+          <img src="images/logo.svg" alt="">
         </div>
         <div class="sidebar_header_title">
           <h5>SCSS / Demo</h5>
@@ -26,7 +26,7 @@
         <div class="sidebar_list_item">
           <a href="index.html">
             <div class="sidebar_list_item_img">
-              <img src="/images/house.svg" alt="">
+              <img src="images/house.svg" alt="">
             </div>
             <div class="sidebar_list_item_title">
               Home
@@ -36,7 +36,7 @@
         <div class="sidebar_list_item">
           <a href="features.html">
             <div class="sidebar_list_item_img">
-              <img src="/images/list.svg" alt="">
+              <img src="images/list.svg" alt="">
             </div>
             <div class="sidebar_list_item_title">
               Features
@@ -46,7 +46,7 @@
         <div class="sidebar_list_item">
           <a href="#!">
             <div class="sidebar_list_item_img">
-              <img src="/images/differences.svg" alt="">
+              <img src="images/differences.svg" alt="">
             </div>
             <div class="sidebar_list_item_title">
               Differences
