add icon & text in login form and update site styling

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </svg>
             </div>
             <div class="sidebar_list_item_title">
-              Login
+              Form
             </div>
           </a>
         </div>
@@ -111,7 +111,7 @@
           <li><a href="#!">Home</a></li>
           <li><a href="features.html">Features</a></li>
           <li><a href="differences.html">Diff<span class="shorten-text">erence</span>s</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li><a href="login.html">Form</a></li>
         </ul>
       </div>
     </nav>
