--- a/features.html
+++ b/features.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SCSS - Demo Website | Home</title>
+  <title>SCSS - Demo Website | Features</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -95,7 +95,7 @@
               </svg>
             </div>
             <div class="sidebar_list_item_title">
-              Login
+              Form
             </div>
           </a>
         </div>
@@ -111,7 +111,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="features.html">Features</a></li>
           <li><a href="differences.html">Diff<span class="shorten-text">erence</span>s</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li><a href="login.html">Form</a></li>
         </ul>
       </div>
     </nav>
